<resources>
    <string name="app_name">Test Novigrad</string>
    <string name="title_activity_account_register">Account Register Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="delete_question_text">Êtes-vous sur de supprimer %1$s?</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="add_text">Ajouter</string>
    <string name="save_text">Enregistrer</string>
    <string name="edit_text">Modifier</string>
    <string name="view_detail_text">Voir plus</string>
    <string name="delete_text">Supprimer</string>
    <string name="cancel_text">Annuler</string>
    <string name="previous">Previous</string>
    <string name="signup_title">Inscription</string>
    <string name="authentication_title">Authentification</string>
    <string name="email_address_label">Adresse e-mail</string>
    <string name="name_label">Nom</string>
    <string name="description_label">Description</string>
    <string name="address_label">Addresse</string>
    <string name="openedAt_label">Ouvert à</string>
    <string name="closedAt_label">Fermé à</string>
    <string name="username_label">Nom Utilisateur</string>
    <string name="password_label">Mot de passe</string>
    <string name="firstname_label">Nom</string>
    <string name="lastname_label">Prenoms</string>
    <string name="user_role_label">Rôle</string>
    <string name="confirm_password_label">Confirmer mot de passe</string>
    <string name="forgot_password_label">Mot de passe oublié ?</string>
    <string name="register_label">Créer votre compte</string>
    <string name="signin_label">Se connecter</string>
    <string name="signin_invite_to_register_label">Vous n\'avez pas encore de compte? Créez le!</string>
    <string name="signup_invite_to_login_label">Vous avez un compte? Connectez-vous!</string>
    <string name="signout_label">Se déconnecter</string>
    <string name="user_role_admin">Administrateur</string>
    <string name="user_role_employee">Employé</string>
    <string name="user_role_client">Client</string>
    <string name="field_required_error">Ce champ est requis!</string>
    <string name="user_management_label">Gestion des utilisateurs</string>
    <string name="agency_management_label">Gestion des succursales</string>
    <string name="customer_services_management_label">Les services clients</string>
    <string name="change_agency_detail_management_label">Détail Succursale: %1$s</string>
    <string name="change_agency_services_management_label">Prestations delivrées par: %1$s</string>
    <string name="select_agency_services_management_label">Selectionnez les Prestations delivrées par: %1$s</string>
    <string name="welcome_text">Bienvenu %1$s, vous êtes connecté en tant que : %2$s</string>
    <string name="search_text">Rechercher</string>
    <string name="reset_text">Re-Initialiser</string>
    <string name="service_name_label">Prestation de service</string>
    <string name="time_label">Horaire de disponibilité</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="password_confirmation_error">Veuillez confirmer le mot de passe!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_emailaddress">Adresse emailinvalide</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>