<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Service Name Filter -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/agency_filter_servicename_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/service_name_label"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <!-- Address Filter -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agency_filter_address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_label"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Time Filter -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agency_filter_time_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_label"
                android:inputType="time" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>
